# slippi-stats

./: .gitignore  Cargo.toml  README.md  game.slp
src/: Player.rs  character.rs  gamedata.rs  input.rs  lib.rs  macros.rs  main.rs  parsable_enum.rs  playerdata.rs  stage.rs  text.rs
src/gamedata/: gamedata.rs  mod.rs
