[package]
name = "slippi_stats"
version = "0.1.0"
authors = ["tylerd008 <77032854+tylerd008@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
peppi = { git = "https://github.com/hohav/peppi", branch = "const-generics" }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
indicatif = "0.16.2"